# llm_photo_recognition_evaluation

./: .env.sample  README.md  evaluation_data.py  main.py  pyproject.toml  signatures.py
.devcontainer/: devcontainer.json  setup.sh
