[project]
name = "llm-photo-recognition-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.21",
    "botocore[crt]>=1.42.21",
    "dspy>=3.0.4",
    "langfuse>=3.11.2",
    "openinference-instrumentation-dspy>=0.1.32",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
